# reinforcement_learning_playground

./: .clang-format  .codespellignore  .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/cart_pole/cart_pole_bringup/: CMakeLists.txt  package.xml
src/cart_pole/cart_pole_bringup/config/: cart_pole_controllers.yaml  gazebo_bridge.yaml
src/cart_pole/cart_pole_bringup/launch/: cart_pole.launch.py
src/cart_pole/cart_pole_bringup/meshes/: pole_with_holder.dae
src/cart_pole/cart_pole_bringup/urdf/: cart_pole.urdf  cart_pole.urdf.xacro  macros.urdf.xacro
src/cart_pole/cart_pole_model_based_controller/: package.xml  setup.cfg  setup.py
src/cart_pole/cart_pole_model_based_controller/cart_pole_model_based_controller/: cart_pole_system.ipynb  cart_pole_sytem.ipynb  check_model.py  dynamics.py  linear_approximation_control_node.py
src/cart_pole/cart_pole_observation/: CMakeLists.txt  package.xml
src/cart_pole/cart_pole_observation/src/: cart_pole_observation_node.cpp
src/cart_pole/cart_pole_observation_interface/: CMakeLists.txt  package.xml
src/cart_pole/cart_pole_observation_interface/msg/: CartPoleObservation.msg
src/cart_pole/cart_pole_reinforcement_learning/: package.xml  setup.cfg  setup.py
src/cart_pole/cart_pole_reinforcement_learning/cart_pole_reinforcement_learning/: cart_pole_basic_policy_node.py  cart_pole_deep_q_learning_policy_node.py  cart_pole_learing_node.py  cart_pole_learning_control_node.py  cart_pole_learning_node.py  cart_pole_neural_network_policy.py  cart_pole_reinforcement_learning_params.py  reinforcement_learning_node.py  reinforcement_learning_node_parameters.yaml
src/cart_pole/genesis_simulations/: package.xml  setup.cfg  setup.py
src/cart_pole/genesis_simulations/genesis_simulations/: cart_pole_basic_policy.py
src/cart_pole/simulation_control/: CMakeLists.txt  package.xml
src/cart_pole/simulation_control/src/: simulation_control_node.cpp
