<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cart_pole_bringup</name>
  <version>1.0.0</version>
  <description>The cart pole description and simulator launcher.</description>
  <maintainer email="wiktorbajor1@gmail.com">Wiktor Bajor</maintainer>
  <license>Apache 2.0</license>

  <author email="delicat.kuba@gmail.com">Jakub Delicat</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
