<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cart_pole_reinforcement_learning</name>
  <version>1.0.0</version>
  <description>Package that controller reinforcement learning loop.</description>
  <maintainer email="wiktorbajor1@gmail.com">Wiktor Bajor</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python-tensorflow-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cart_pole_observation_interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
